--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
       </p>
 
       <p>
-        Double-check if you really wanted to visit <span class=loc"></span>
+        Double-check if you really wanted to visit: <span class="loc"></span>
       </p>
 
       <p>
