--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
+  <head><!--
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">-->
     <title>Page not found;</title>
     <style type="text/css" media="screen">
       body {
