--- a/404.html
+++ b/404.html
@@ -4,10 +4,10 @@
   <head><!--
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">-->
-    <title>Page not found;</title>
+    <title>Page not found</title>
     <style type="text/css" media="screen">
       body {
-        background-color: #f1f1f1;
+        background-color: #98ff98;
         margin: 0;
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       }
