--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ a.forEach(i=> i.style.width= max + "px");
 )
 .then(
 let hide= ["CNAME","starsbg.jpg","about,txt","index.html","404.html"];
-hide.forEach(i=> select(`a[href$="${i}"]`).style.display= "none";
+hide.forEach(i=> select(`a[href$="${i}"]`).style.display= "none");
 
 )
   
