--- a/index.html
+++ b/index.html
@@ -91,29 +91,25 @@ selectAll= (x,y=document)=> y.querySelectorAll(x);
 let url= `https://api.github.com/repos/nostalgickd/cdn/contents/?v=${Date.now()}`;
 
 async function fetchLinks(){
-await fetch(url) 
-.then(r=>r.json())
-.then(d=>{
-//Exclude first 3 files; let files= d.slice(3).map(i=> `<a href="${i.path}">${i.path.split(".")[0]}</a>`);
-let files= d.map(i=> `<a href="${i.path}">${i.path.split(".")[0]}</a>`);
+let f= await fetch(url) ;
+let r= await f.json();
+let files= r.map(i=> `<a href="${i.path}">${i.path.split(".")[0]}</a>`);
 select("#links").innerHTML= files.join("<br>");
-});
-}
 
-fetchLinks();
-  
 let a= selectAll("a"); let max= 0;
-  
+ 
 a.forEach(i=>{
 if(i.offsetWidth>max) max= i.offsetWidth;
 });
 
 a.forEach(i=> i.style.width= max + "px");
 
-
 let hide= ["CNAME","starsbg.jpg","about,txt","index.html","404.html"];
 hide.forEach(i=>{ select(`a[href$="${i}"]`).style.display= "none";});
 
+}
+
+fetchLinks();
   
   
 </script>	
