--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ background: black;
 }
 
 a:visited{
-color: gray;
+color: yellow;
 }
   
   
@@ -104,7 +104,7 @@ if(i.offsetWidth>max) max= i.offsetWidth;
 
 a.forEach(i=> i.style.width= max + "px");
 
-let hide= ["CNAME","starsbg.jpg","about,txt","index.html","404.html"];
+let hide= ["CNAME","starsbg.jpg","about.txt","index.html","404.html"];
 hide.forEach(i=>{ select(`a[href$="${i}"]`).style.display= "none";});
 
 }
