--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@ align-items: center;
 justify-content: flex-start;
 }
 
+#links{
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: flex-start;  
+}  
+  
+  
 a{
 color: yellow;
 background: rgb(100,0,255,0.3);
