--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@ color: yellow;
   
 @media (orientation:portrait){
 #container{
-width: 95%; height: auto;
+width: 95%; min-height: 100vh;
 }
 /*body{background-size: 35%}*/
 }	
 
 @media (orientation:landscape){
 #container{
-width: 75%; height: auto;
+width: 75%; min-height: 100vh;
 }
 /*body{background-size: 50%}*/			
 }	
