--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ width: 75%; min-height: 100vh;
 }	
 
   #run{
-width:10vw;
-height: 5vw;
+width:200px;
+height: 100px;
 outline: 1px solid #38ff19;
 display: grid;
 grid-template-columns: 1fr 1fr;
@@ -103,8 +103,11 @@ grid-column: 1/-1;
 }
 
 .span{
+  position: absolute; right: -5px;
 background: white; color: black;  
   }  
+  
+  .span:hover{color: green;}
   
 button{
 border: none;
@@ -112,7 +115,7 @@ outline:none;
   }
   
   #run{
-  position: absolute; right:0px; bottom: 5px;}
+  position: absolute; top:0px; right: 0px;}
   }
 </style>
 </head>
