--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ i.onclick= function(e){
 tavalue(i.parentNode.href);
 copy.innerHTML= "Copy";
 e.stopPropagation();
+  e.preventDefault();
 };
 });
 
