--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ padding:5px 5px;
 text-align: center;
 text-decoration: none;
 font-variant: small-caps;
+  position: relative;
 }
 
 a.main:hover{
@@ -84,8 +85,8 @@ width: 75%; min-height: 100vh;
 }	
 
   #run{
-width:200px;
-height: 100px;
+width:300px;
+height: 150px;
 outline: 1px solid #38ff19;
 display: grid;
 grid-template-columns: 1fr 1fr;
@@ -103,7 +104,7 @@ grid-column: 1/-1;
 }
 
 .span{
-  position: absolute; right: -5px;
+  position: absolute; right: -2px;
 background: white; color: black;  
   }  
   
