--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ grid-column: 1/-1;
 }
 
 .span{
-  position: absolute; right: -2px;
+  position: absolute; right: -5ch;
 background: white; color: black;  
   }  
   
