--- a/404.html
+++ b/404.html
@@ -51,7 +51,8 @@ justify-content: flex-start;
 
 
 #error>span{
-font: 20px "Press Start 2P";
+font-size: 20px;
+font-family: "Press Start 2P";
 color: red;
 }
 
@@ -93,8 +94,8 @@ body{background-size: 50%}
 <div id="container">
 <div id="error">
 <span>Page Not Found</span><p>or sth went wrong</p>
-<img class="tom1" src="file:///storage/emulated/0/PhotoEditor/Edited Pics/PhotoEdit_20211102_154408.png"/>
-<img class="tom2" src="file:///storage/emulated/0/PhotoEditor/Edited Pics/PhotoEdit_20211108_202524.png"/>
+<img class="tom1" src="/resources/t1/.png"/>
+<img class="tom2" src="/resources/t2.png"/>
 </div>
 
 </div>
