--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ outline: none;
 }	
 
 body{
-background: rgb(251,244,234) url("starsbg.jpg");
+background: rgb(251,244,234) url("/resourcex/starsbg.jpg");
 background-size: cover;
 min-width: 100vw; min-height: 100vh;
 position: relative;
@@ -170,7 +170,7 @@ if(i.offsetWidth>max) max= i.offsetWidth;
 
 a.forEach(i=> i.style.width= max + "px");
 
-let hide= ["CNAME","starsbg.jpg","about.txt","index.html","404.html"];
+let hide= ["CNAME","resources","about.txt","index.html","404.html"];
 hide.forEach(i=>{ select(`a.main[href$="${i}"]`).style.display= "none";});
 
 /*selectAll(".run").forEach(i=>{
