--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ outline: none;
 }	
 
 body{
-background: rgb(251,244,234) url("/resourcex/starsbg.jpg");
+background: rgb(251,244,234) url("/resources/starsbg.jpg");
 background-size: cover;
 min-width: 100vw; min-height: 100vh;
 position: relative;
