--- a/404.html
+++ b/404.html
@@ -94,8 +94,8 @@ body{background-size: 50%}
 <div id="container">
 <div id="error">
 <span>Page Not Found</span><p>or sth went wrong</p>
-<img class="tom1" src="/resources/t1/.png"/>
-<img class="tom2" src="/resources/t2.png"/>
+<img class="tom1" src="resources/t1.png"/>
+<img class="tom2" src="resources/t2.png"/>
 </div>
 
 </div>
