--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ outline:none;
   }
   
   #run{
-  position: absolute; top:0px; right: 0px;}
+  position: absolute; bottom:0px; right: 0px;}
   }
 </style>
 </head>
