--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ let run= select(".run");
 
 
 function tavalue(a){
-ta.value=`let url= "${a}";
+ta.value=`let url= "${a}?v=" + Date.now()";
 
 fetch(url)
 .then(r=>r.text())
@@ -205,7 +205,7 @@ tavalue("");
 spans.forEach(i=>{
 if(!i.parentNode.href.includes(".js")) i.style.display="none";
 i.onclick= function(e){
-tavalue(i.parentNode.href + "?v=" + Date.now());
+tavalue(i.parentNode.href);
 copy.innerHTML= "Copy";
 e.stopPropagation();
   e.preventDefault();
