--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@ justify-content:center;
 }
 
 .message{
-background: rgb(255,255,255,0.7);
 padding: 5px;
+border: 1px solid black;
+background: rgb(255,255,255,0.7);
 }
 
 
@@ -68,20 +69,18 @@ background: yellow;
 
 
 table#links{
-background: rgb(255,255,255,0.7);
-border:1.5px solid black;		
-border-collapse: collapse;
 width: 70%;
 table-layout: fixed;
-caption-side: top;
+border-collapse: separate;
+border-spacing: 5px 2px;
 }
- 
+
+
 td{
-border:1px solid black;
-overflow: auto;
+overflow: hidden;
 height: calc(1em + 5px);
-text-align: left;
-vertical-align: center;
+border:1px solid black;
+background: rgb(255,255,255,0.7);
 }
 
 
