--- a/template.html
+++ b/template.html
@@ -26,7 +26,8 @@ min-height: 100vh;
 position: relative;
 display: flex;
 flex-direction: column;
-place-content: center flex-start;
+justify-content: flex-start;
+align-items: center;
 }
 
 #container{
@@ -36,7 +37,8 @@ margin-top: 20px;
 position: relative;
 display: flex;
 flex-direction: column;
-place-content: center flex-start;
+justify-content: flex-start;
+align-items: center;
 }
 
 @media (orientation:portrait){
