--- a/shortener.html
+++ b/shortener.html
@@ -9,7 +9,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-<title>KD HTML Template</title>
+<title>URL Shortener - ga.kawiesh.ga</title>
 
 <style>				
 *{
