--- a/tree/list-github-files.html
+++ b/tree/list-github-files.html
@@ -340,11 +340,10 @@ temp.remove();
 }
 }
 
-
 function resetAll(){
 list.value= "";
 links.innerHTML="";
-message.innerHTML= "Loading...";
+message.innerHTML= "Loading....";
 }
 
 
