--- a/tree/list-files-recursive1.html
+++ b/tree/list-files-recursive1.html
@@ -128,7 +128,7 @@ if (full.hasOwnProperty(i)){
 full[i]= full[i].map(j=>{
 let text= j.split("/");
 text= text[text.length-1];
-return `<a href="/${j}">${text}</a>`;
+return `<a href='/${j}'>${text}</a>`;
 });
 }
 }
