--- a/tree/index.html
+++ b/tree/index.html
@@ -2,7 +2,7 @@
 
 <a href="list-github-files-recursive.html">List all files in a repo [FIXED]</a><br><br>
 
-<a href="list-files-recursive1.html">List all files in a repo [CUSTOM]</a><br><br>
+<a href="list-files-recursive.html">List all files in a repo [CUSTOM]</a><br><br>
 
 
 <a href="make-github-directory-tree.html">Make tree of all files in repo</a><br><br>
