--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ selectAll= (x,y=document)=> y.querySelectorAll(x);
 
 let url0= "https://api.github.com/repos/nostalgickd/cdn/contents/?v=" + Date.now();
 let table= select("table#links");
-let url= "https://cors.krishan.workers.dev/?https://github.com/nostalgickd/cdn");
+let url= "https://cors.krishan.workers.dev/?https://github.com/nostalgickd/cdn";
 
 
 
